# CollisionDetectionLibrary

./: CMakeLists.txt  README.md
include/cdl/: Circle.hpp  CollisionDetection.hpp  CollisionHandler.hpp  CollisionObject.hpp  DefaultCollisionHandler.hpp  Line.hpp  Polygon.hpp  Utils.hpp  Vec2.hpp  World.hpp  cdl.hpp
modules/: FindUnitTest++.cmake
src/cdl/: Circle.cpp  Circle.hpp  CollisionDetection.cpp  CollisionDetection.hpp  CollisionObject.cpp  Line.cpp  Line.hpp  Polygon.cpp  Utils.cpp  Vec2.cpp  Vec2.hpp  World.cpp
test/: BasicTests.cpp  CollisionDetectionTest.cpp  SimulationTests.cpp  main.cpp
