cmake_minimum_required(VERSION 2.8)
project(cdl)

get_filename_component(CDL_MODULES_PATH "./modules" ABSOLUTE) 
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CDL_MODULES_PATH})
find_package(UnitTest++)

file(GLOB CDL_SRC "src/cdl/*.hpp" "src/cdl/*.cpp")
include_directories(include)
add_library(cdl ${CDL_SRC} ${CDL_INCLUDE})

if( ${UNITTEST++_FOUND} )
	include_directories(${UNITTEST++_INCLUDE_DIRS})
	#include_directories("../../UnitTest++/src")
	#get_filename_component(UNIT_TEST_LIB_DIR "../../UnitTest++/build" ABSOLUTE) 
	#link_directories(${UNIT_TEST_LIB_DIR})
	file(GLOB CDL_TEST_SRC "test/*.cpp")
	add_executable(cdlTest ${CDL_TEST_SRC})
	target_link_libraries(cdlTest cdl ${UNITTEST++_LIBRARIES})
endif( ${UNITTEST++_FOUND} )
